force-app/main/default/objects/PDRI__ReplicateIt_Settings__c/fields/PDRI__Debug_Deployment__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Debug_Deployment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to have the deployment invocation sent to Prodly support and skip the actual deployment. Allows support to debug errors by reproducing the deployment in a local development environment.</description>
    <inlineHelpText>Enable this setting to have the deployment invocation sent to Prodly support and skip the actual deployment. Allows support to debug errors by reproducing the deployment in a local development environment.</inlineHelpText>
    <label>Debug Deployment</label>
    <type>Checkbox</type>
</CustomField>