force-app/main/default/objects/PDRI__ReplicateIt_Settings__c/fields/PDRI__Deployment_Flow__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Flow__c</fullName>
    <description>DEPRECATED</description>
    <inlineHelpText>DEPRECATED</inlineHelpText>
    <label>DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>