force-app/main/default/objects/PDRI__ReplicateIt_Settings__c/fields/PDRI__No_Record_Results__c.field-meta.xml
<CustomField>
    <fullName>PDRI__No_Record_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to stop storing individual record results in the source org overall deployment result tracking. Helps improve used data space, especially for large deployment sets.</description>
    <inlineHelpText>Enable this setting to stop storing individual record results in the source org overall deployment result tracking. Helps improve used data space, especially for large deployment sets.</inlineHelpText>
    <label>No Record Results</label>
    <type>Checkbox</type>
</CustomField>